cleaned up files and added handlebars

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
             <h5 class="motto">Ramen is Japanese dish. It consists of Chinese-style wheat noodles served in a meat or (occasionally) fish-based broth, often flavored with soy sauce or miso, and uses toppings such as sliced pork, dried seaweed, menma, and green onions. <a href="https://en.wikipedia.org/wiki/Ramen">Wiki Pedia</a></h5>
               <br>
               <br>
+              <div class ="row">
+                <div class="col-md-6" id="order"></div>
+                <div class="col-md-6" id="slurped"></div>
+              </div>
               <br>
               <br>
             <div class="subscribe">
@@ -37,7 +41,7 @@
                         <form class="form-inline" role="form">
                           <div class="form-group">
                             <label class="sr-only" for="exampleInputEmail2">Ramen</label>
-                            <input type="text" class="form-control transparent" placeholder="Curry Fish Ramen">
+                            <input type="text" class="form-control transparent" placeholder="Curry Fish Ramen" required>
                           </div>
                           <button type="submit" class="btn btn-danger btn-fill">Submit</button>
                         </form>
@@ -46,6 +50,7 @@
             </div>
         </div>
     </div>
+
     <!-- footer -->
     <div class="footer">
       <div class="container">
@@ -55,7 +60,6 @@
       </div>
     </div>
  </div>
-
   </body>
   <!-- js styling -->
   <script type="text/javascript" src="assets/js/jquery-1.10.2.js"></script>
